--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,8 @@ knitr::opts_chunk$set(echo = TRUE)
 This repository contains the submission for Raveen Badyal's Assignment B2 for STAT545B. On November 10, this repository contains the completed Assignment B2. This assignment is focused on creating an R package. The package contains a function which converts pounds into kilograms.
 
 # Contents
-- The README.md file (this file) gives an overview of the repository for Assignment B1.
+- The README.Rmd file (this file) gives an overview of the repository for Assignment B1.
+- The README.md file is the knitted format of the Rmd file.
 - The rbpack folder contains all files necessary for installing and reviewing the rbpack package.
 - The rbpack folder contains the following files that were generated when creating the rbpack package:
     -    DESCRIPTION: contains package metadata.
