--- a/README.Rmd
+++ b/README.Rmd
@@ -6,10 +6,10 @@ output: github_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-# rbpack Overview
+## rbpack Overview
 This repository contains the submission for Raveen Badyal's Assignment B2 for STAT545B. On November 10, this repository contains the completed Assignment B2. This assignment is focused on creating an R package. The package contains a function which converts pounds into kilograms.
 
-# Contents
+## Contents
 - The README.Rmd file (this file) gives an overview of the repository for Assignment B1.
 - The README.md file is the knitted format of the Rmd file.
 - The rbpack folder contains all files necessary for installing and reviewing the rbpack package.
@@ -23,6 +23,6 @@ This repository contains the submission for Raveen Badyal's Assignment B2 for ST
     -    man folder: contains metadata for each function in the package.
     -    R folder: contains the R script for the code of the function.
 
-# File Engagement
+##File Engagement
 To engage with these files, . Version control was used to connect edits made to the Rmd file in RStudio to Github. Devtools was used to create the package in RStudio. If the goal is to review the final project, a readable format is available on Github in the md file format.
 
